# treetop-test

./: .gitignore  Cargo.nix  Cargo.toml  README.md  flake.nix
.github/workflows/: build.yaml
src/: main.rs  porc_app.rs  process.rs  regex.rs  tree.rs  treetop_app.rs  tui_app.rs  ui.rs  utils.rs
src/snapshots/: porc__porc_app__test__filtering.snap  porc__porc_app__test__filtering_by_pid.snap  porc__porc_app__test__filtering_with_regexes.snap  porc__porc_app__test__more_complicated_tree.snap  porc__porc_app__test__processes_can_be_sorted_by_cpu.snap  porc__porc_app__test__processes_get_sorted_by_pid.snap  porc__porc_app__test__shows_a_tree_with_header_and_side_columns.snap  treetop__treetop_app__test__filtering.snap  treetop__treetop_app__test__filtering_by_pid.snap  treetop__treetop_app__test__filtering_with_regexes.snap  treetop__treetop_app__test__more_complicated_tree.snap  treetop__treetop_app__test__processes_can_be_sorted_by_cpu.snap  treetop__treetop_app__test__processes_get_sorted_by_pid.snap  treetop__treetop_app__test__shows_a_tree_with_header_and_side_columns.snap
