[package]
name = "porc"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "=4.4.18", features = ["derive"] }
crossterm = "0.27.0"
nix = {version = "0.27.1", features = ["signal"]}
num-format = "0.4.4"
ratatui = "0.26.0"
signal-hook = "0.3.17"
sysinfo = "0.30.5"

[dev-dependencies]
pretty_assertions = "1.4.0"
unindent = "0.2.3"
